--- a/appmanifest.json
+++ b/appmanifest.json
@@ -1,6 +1,6 @@
 ﻿{
-	"name": "daphne",
-	"short_name": "daphne",
+	"name": "New project",
+	"short_name": "New project",
 	"start_url": "index.html",
 	"display": "fullscreen",
 	"orientation": "any",
